@@ -7,8 +7,9 @@
 
 2012-03-19 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
-	* mpz/oddfac_1.c: Improve ASSERTs.
 	* gen-fac_ui.c: Generate more constants (possible mini-mpz_root). 
+	* mpz/oddfac_1.c: Improve ASSERTs.
+	(log_n_max): Use precomputed table.
 
 	* longlong.h (_PROTO): Remove.
 
